Curiosity Photos Added

--- a/app/src/main/res/layout/activity_image_day.xml
+++ b/app/src/main/res/layout/activity_image_day.xml
@@ -1,9 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.ImageDayActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        tools:context=".activities.ImageDayActivity"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/imageOfTheDayTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:textSize="50dp" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageOfTheDay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageOfTheDayTitle" />
+
+        <TextView
+            android:id="@+id/imageCopyright"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageOfTheDay"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center" />
+        <TextView
+            android:id="@+id/imageOfTheDayDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_below="@id/imageCopyright"/>
+    </RelativeLayout>
+</ScrollView>
