--- a/app/src/main/res/layout/photo_list_item.xml
+++ b/app/src/main/res/layout/photo_list_item.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:layout_marginBottom="20dp">
+    android:padding="10dp">
     <ImageView
         android:id="@+id/curiosityPhoto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/curiosityPhotoDate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="skfnjlnfknsdan fnfsknfalk"/>
-</LinearLayout>
+        android:layout_height="wrap_content" />
+</RelativeLayout>
